Ajustes de Namespace

--- a/Resources/views/Generate/appCoreBundle.html.twig
+++ b/Resources/views/Generate/appCoreBundle.html.twig
@@ -1,6 +1,6 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}IbramCoreDevelBundle:Generate:appCoreBundle{% endblock %}
+{% block title %}SanSISCoreDevelBundle:Generate:appCoreBundle{% endblock %}
 
 {% block body %}
 <h1>Welcome to the Generate:appCoreBundle page</h1>
