--- a/Resources/views/Generate/configYml.html.twig
+++ b/Resources/views/Generate/configYml.html.twig
@@ -1,6 +1,6 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}IbramCoreDevelBundle:Generate:configYml{% endblock %}
+{% block title %}SanSISCoreDevelBundle:Generate:configYml{% endblock %}
 
 {% block body %}
 <h1>Welcome to the Generate:configYml page</h1>
