--- a/Resources/views/Generate/parametersYml.html.twig
+++ b/Resources/views/Generate/parametersYml.html.twig
@@ -1,6 +1,6 @@
-{% extends "IbramCoreDevelBundle::base.html.twig" %}
+{% extends "SanSISCoreDevelBundle::base.html.twig" %}
 
-{% block title %}IbramCoreDevelBundle:Generate:parametersYml{% endblock %}
+{% block title %}SanSISCoreDevelBundle:Generate:parametersYml{% endblock %}
 
 {% block body %}
 Informar a role da aplicação para a conexão
