--- a/Resources/views/QA/checkStyle.html.twig
+++ b/Resources/views/QA/checkStyle.html.twig
@@ -1,6 +1,6 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}IbramCoreDevelBundle:QA:checkStyle{% endblock %}
+{% block title %}SanSISCoreDevelBundle:QA:checkStyle{% endblock %}
 
 {% block body %}
 <h1>Welcome to the QA:checkStyle page</h1>
