--- a/Resources/views/Reverse/selectSchema.html.twig
+++ b/Resources/views/Reverse/selectSchema.html.twig
@@ -1,4 +1,4 @@
-{% extends "IbramCoreDevelBundle::base.html.twig" %}
+{% extends "SanSISCoreDevelBundle::base.html.twig" %}
 
 {% block body %}
 <strong class="title">Gerador de Entidades</strong>
@@ -39,7 +39,7 @@
     	</ul>
 		<div class="pull-right">
     		<input type="submit" value="Gerar" class="btn btn-primary" />
-    		<a href="{{ path('Ibram_core_devel_homepage') }}" id="voltarBt" class="btn">Voltar</a>
+    		<a href="{{ path('SanSIS_core_devel_homepage') }}" id="voltarBt" class="btn">Voltar</a>
 		</div>
 		</form>
 	</div>
