--- a/Resources/views/Tools/routerDebug.html.twig
+++ b/Resources/views/Tools/routerDebug.html.twig
@@ -1,6 +1,6 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}IbramCoreDevelBundle:Tools:routerDebug{% endblock %}
+{% block title %}SanSISCoreDevelBundle:Tools:routerDebug{% endblock %}
 
 {% block body %}
 <h1>Welcome to the Tools:routerDebug page</h1>
