--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -1,4 +1,4 @@
-{% extends "IbramCoreBaseBundle::base.html.twig" %}
+{% extends "SanSISCoreBaseBundle::base.html.twig" %}
 
 {% block title %}Bundle de Desenvolvimento{% endblock %}
 
@@ -12,7 +12,7 @@
 
 {% block body %}
 
-	<h1>Base de desenvolvimento de sistemas do Ibram</h1>
-	<p>Esta é a base para desenvolvimento de sistemas do Ibram, do qual todos os layouts deverão estender</p>
+	<h1>Base de desenvolvimento de sistemas do SanSIS</h1>
+	<p>Esta é a base para desenvolvimento de sistemas do SanSIS, do qual todos os layouts deverão estender</p>
 
 {% endblock %}
