--- a/Resources/views/Console/generateBundle.html.twig
+++ b/Resources/views/Console/generateBundle.html.twig
@@ -1,6 +1,6 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}IbramCoreDevelBundle:Console:generateBundle{% endblock %}
+{% block title %}SanSISCoreDevelBundle:Console:generateBundle{% endblock %}
 
 {% block body %}
 <h1>Welcome to the Console:generateBundle page</h1>
