--- a/Resources/views/Console/generateDoctrineCrud.html.twig
+++ b/Resources/views/Console/generateDoctrineCrud.html.twig
@@ -1,6 +1,6 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}IbramCoreDevelBundle:Console:generateDoctrineCrud{% endblock %}
+{% block title %}SanSISCoreDevelBundle:Console:generateDoctrineCrud{% endblock %}
 
 {% block body %}
 <h1>Welcome to the Console:generateDoctrineCrud page</h1>
