--- a/Resources/views/Tools/serviceList.html.twig
+++ b/Resources/views/Tools/serviceList.html.twig
@@ -1,6 +1,6 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}IbramCoreDevelBundle:Tools:serviceList{% endblock %}
+{% block title %}SanSISCoreDevelBundle:Tools:serviceList{% endblock %}
 
 {% block body %}
 <h1>Welcome to the Tools:serviceList page</h1>
