Ajustes básicos de layout para exemplo de campos Ajuste no README.md para caminho de rota

--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -5,8 +5,9 @@
 
 <strong class="title">Funcionalidades disponíveis</strong>
 
-<div class="box_borda">
+<div class="box_borda" >
 	<div class="padding">
+	   <div class="span11">
         <div class="span5">
 
             {#<p><b>Ferramentas de pré-desenvolvimento</b>#}
@@ -64,24 +65,22 @@
 
         </div>
         <div class="span5">
-
             <p><b>Exemplos de máscaras:</b>
             <ul class=""form">
-                <li class="span12"><label class="span2">Data:</label> <input class="date_ddmmyyyy"></li>
-                <li class="span12"><label class="span2">Hora:</label> <input class="time"></li>
-                <li class="span12"><label class="span2">Inteiro:</label> <input class="integer"></li>
-                <li class="span12"><label class="span2">Ponto Flutuante:</label> <input class="float"></li>
-                <li class="span12"><label class="span2">Ponto Flutuante (BR):</label> <input class="float-br"></li>
-                <li class="span12"><label class="span2">Money:</label> <input class="money"></li>
-                <li class="span12"><label class="span2">Telefone:</label> <input class="phone"></li>
-                <li class="span12"><label class="span2">CPF:</label> <input class="cpf"></li>
-                <li class="span12"><label class="span2">CNPJ:</label> <input class="cnpj"></li>
-                <li class="span12"><label class="span2">CEP:</label> <input class="cep"></li>
-
+                <li class="span5"><label class="span2">Data:</label> <input class="span3 date_ddmmyyyy"></li>
+                <li class="span5"><label class="span2">Hora:</label> <input class="span3 time"></li>
+                <li class="span5"><label class="span2">Inteiro:</label> <input class="span3 integer"></li>
+                <li class="span5"><label class="span2">Float:</label> <input class="span3 float"></li>
+                <li class="span5"><label class="span2">Fração (BR):</label> <input class="span3 float-br"></li>
+                <li class="span5"><label class="span2">Money:</label> <input class="span3 money"></li>
+                <li class="span5"><label class="span2">Telefone:</label> <input class="span3 phone"></li>
+                <li class="span5"><label class="span2">CPF:</label> <input class="span3 cpf"></li>
+                <li class="span5"><label class="span2">CNPJ:</label> <input class="span3 cnpj"></li>
+                <li class="span5"><label class="span2">CEP:</label> <input class="span3 cep"></li>
             </ul>
             </p>
         </div>
-        &nbsp;
+        </div>
     </div>
 </div>
 {% endblock %}
