--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -6,7 +6,7 @@
 <strong class="title">Funcionalidades disponíveis</strong>
 
 <div class="box_borda" >
-	<div class="padding">
+	<div class="paddingAll">
 	   <div class="span11">
         <div class="span5">
 
